--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.17.1"
+    "react-native-screens": "^4.17.1",
+    "react-native-video": "^6.17.0",
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
